installed django-debug-toolbar

--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -1,5 +1,9 @@
-{% if heading %}
-    <h1>Welcome to {{ heading }}</h1>
-{% else %}
-    <h1>Welcome</h1>
-{% endif %}
+<html>
+    <body>
+        {% if heading %}
+            <h1>Welcome to {{ heading }}</h1>
+        {% else %}
+            <h1>Welcome</h1>
+        {% endif %}
+    </body>
+</html>
