--- a/playground/templates/playground/index.html
+++ b/playground/templates/playground/index.html
@@ -5,5 +5,6 @@
         {% else %}
             <h1>Welcome</h1>
         {% endif %}
+        <h2>This app is for learning and testing stuff.</h2>
     </body>
 </html>
